--- a/src/Components/Content/LeftPanel/LeftPanel.module.css
+++ b/src/Components/Content/LeftPanel/LeftPanel.module.css
@@ -1,33 +1,41 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap');
 .wrapper {
   display: grid;
   justify-self: center;
-  height: 544px;
-  width: 446px;
+  height: max-content;
+  width: 480px;
   padding: 15px;
   border-radius: 20px;
 }
 
 .appeal {
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  font-family: Jost;
-  font-style: normal;
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-areas:
+  '.'
+  'first'
+  'second'
+  '.'
+  'third';
 }
 
 .appeal_first {
+  grid-area: first;
   font-weight: 500;
   font-size: 44px;
   line-height: 58px;
 }
 
 .appeal_second {
+  grid-area: second;
   font-weight: normal;
+  font-weight: 400;
   font-size: 20px;
   line-height: 29px;
+  color: #8C8C8C;
 }
 
 .appeal_third {
+  grid-area: third;
   font-weight: 500;
   font-size: 20px;
   line-height: 29px;
