--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap');
+
 * {
   margin: 0;
   box-sizing: border-box;
@@ -11,6 +13,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* box-sizing: border-box; */
+  font-family: Jost;
+  font-style: normal;
 }
 
 code {
