--- a/src/Components/Content/LeftPanel/LeftPanel.module.css
+++ b/src/Components/Content/LeftPanel/LeftPanel.module.css
@@ -2,7 +2,8 @@
   display: grid;
   justify-self: center;
   height: max-content;
-  width: 480px;
+  min-width: 480px;
+  width: 50%;
   padding: 15px;
   border-radius: 20px;
 }
