--- a/src/Components/Content/LeftPanel/LeftPanel.module.css
+++ b/src/Components/Content/LeftPanel/LeftPanel.module.css
@@ -2,10 +2,14 @@
   display: grid;
   justify-self: center;
   height: max-content;
-  min-width: 480px;
-  width: 50%;
+  width: 460px;
   padding: 15px;
-  border-radius: 20px;
+}
+
+.wrapper_fixed {
+  display: grid;
+  position: fixed;
+  width: 460px;
 }
 
 .appeal {
