--- a/src/Components/Content/RightPanel/Voting/LawCourt/LawCourt.module.css
+++ b/src/Components/Content/RightPanel/Voting/LawCourt/LawCourt.module.css
@@ -1,12 +1,15 @@
 .lawCourt {
   position: relative;
   width: 100%;
+  height: 50vh;
   min-height: 400px;
 }
 
 .lawCourt_image {
   width: 100%;
-  height: 360px;
+  height: 90%;
+  max-height: 460px;
   border: none;
   border-radius: 20px;
+  object-fit: cover;
 }
