--- a/src/Components/Content/LeftPanel/LeftPanel.module.css
+++ b/src/Components/Content/LeftPanel/LeftPanel.module.css
@@ -1,8 +1,8 @@
 .wrapper {
-  display: grid;
+  display: flex;
+  justify-content: center;
   justify-self: center;
-  height: max-content;
-  width: 460px;
+  width: 100%;
   padding: 15px;
 }
 
