--- a/src/Components/Content/RightPanel/ContentHead/URLIndication/CurrLink/CurrLink.module.css
+++ b/src/Components/Content/RightPanel/ContentHead/URLIndication/CurrLink/CurrLink.module.css
@@ -12,3 +12,19 @@
   padding: 0 20px 0 20px;
   margin-left: 10px;
 }
+
+.nonExac {
+  display: block;
+  height: 40px;
+  width: max-content;
+  min-width: 140px;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: 2px;
+  background: rgba(255, 134, 142, 0.2);
+  color: #FF868E;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 0 20px 0 20px;
+  margin-left: 10px;
+}
