--- a/src/Components/Content/RightPanel/Selected/ContentHeadAdd/IdIndicator.module.css
+++ b/src/Components/Content/RightPanel/Selected/ContentHeadAdd/IdIndicator.module.css
@@ -1,4 +1,9 @@
 .dogId {
   height: 40px;
   margin-left: 10px;
+  line-height: 40px;
+  padding: 0 30px;
+  background: #FF868E;
+  border-radius: 10px;
+  font-size: 20px;
 }
