--- a/src/Components/Content/RightPanel/Voting/ActionLogs/ActionLogs.module.css
+++ b/src/Components/Content/RightPanel/Voting/ActionLogs/ActionLogs.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 290px;
   margin-top: 15px;
+  overflow-y: auto;
 }
