--- a/src/Components/Content/RightPanel/Selected/ContentHeadAdd/IdIndicator.module.css
+++ b/src/Components/Content/RightPanel/Selected/ContentHeadAdd/IdIndicator.module.css
@@ -1,4 +1,11 @@
 .dogId {
   height: 40px;
   margin-left: 10px;
+  padding: 0 30px;
+  background-color: #FF868E;
+  border-radius: 10px;
+  text-align: center;
+  letter-spacing: 2px;
+  line-height: 40px;
+  font-size: 20px;
 }
