--- a/src/Components/Content/RightPanel/Selected/Slider/Slider.module.css
+++ b/src/Components/Content/RightPanel/Selected/Slider/Slider.module.css
@@ -3,11 +3,12 @@
     width: 100%;
     height: 50vh;
     min-height: 400px;
+    margin-bottom: 20px;
 }
 
 .slider_image {
     width: 100%;
-    height: 90%;
+    height: 100%;
     border: none;
     border-radius: 20px;
     object-fit: cover;
