--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 }
 
 body {
+  min-width: 1100px;
+  overflow-x: hidden;
   /* margin: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
